--- a/templates/index-template.html
+++ b/templates/index-template.html
@@ -32,9 +32,9 @@
 
 			.icons {
 				margin-bottom: 40px;
-				-webkit-column-count: 5;
-				   -moz-column-count: 5;
-				        column-count: 5;
+				-webkit-column-count: 6;
+				   -moz-column-count: 6;
+				        column-count: 6;
 				-webkit-column-gap: 20px;
 				   -moz-column-gap: 20px;
 				        column-gap: 20px;
@@ -42,12 +42,12 @@
 
 			.icons__item,
 			.icons__item i {
-				line-height: 2em;
 				cursor: pointer;
+				text-align: center;
 			}
 
 			.icons__item:hover {
-				color: #3c90be;
+				color: #fe673a;
 			}
 
 			.icons__item i {
@@ -61,15 +61,37 @@
 				        transform: scale(1.1);
 			}
 
+			.how-to-use {
+				background: #fe673a;
+				bottom: 44px;
+				position: fixed;
+				width: 100%;
+			}
+
 			footer {
 				background: #ededed;
 				bottom: 0px;
 				color: #999;
 				font-size: 14px;
-				margin-top: 40px;
-				padding: 1em;
 				position: fixed;
 				width: 100%;
+			}
+
+			.text-white {
+				color: white
+			}
+
+			pre {
+				background: #dedede;
+				padding: 16px;
+			}
+
+			.pull-right {
+				float: right;
+			}
+
+			#close-code-snippet {
+				cursor: pointer;
 			}
 
 		<%= styles %>
@@ -77,36 +99,64 @@
 	</head>
 	<body>
 		<div class='container'>
-			<h1><%= fontFamilyName %><% if (version) { %><small>version <%= version %></small><% } %></h1>
+			<h1>EOS Icons<% if (version) { %><small>version <%= version %></small><% } %></h1>
 
 			<div class="icons" id="icons">
 				<% for (var glyphIdx = 0; glyphIdx < glyphs.length; glyphIdx++) { var glyph = glyphs[glyphIdx] %>
-					<div class="icons__item" data-name="<%= glyph %>"><i class="<%= baseClass %>"><%= glyph %></i> <%= glyph %></div>
+					<div class="icons__item" data-name="<%= glyph %>">
+					  <i class="<%= baseClass %>"><%= glyph %></i>
+						<br>
+						<%= glyph %>
+					</div>
 				<% } %>
 			</div>
-
-			<h1>
-			  How to use them:
-				<small>
-				  (click on an icon to see the code snippet)
-				</small>
-			</h1>
-			<% if (addLigatures) { %>
-			<pre><code>&lt;i class=&quot;<%= baseClass %>&quot;&gt;<span id="name2">icon_name</span>&lt;/i&gt;</code></pre>
-			<% } %>
     </div>
+
+		<div class='how-to-use'>
+		  <div class='container'>
+				<h2 class='text-white'>
+					How to use it:
+					<small id='close-code-snippet' class='pull-right'>X Close</small>
+				</h2>
+				<% if (addLigatures) { %>
+				<pre><code>&lt;i class=&quot;<%= baseClass %>&quot;&gt;<span id="name2">icon_name</span>&lt;/i&gt;</code></pre>
+				<% } %>
+			</div>
+		</div>
 		<footer>
-		  Download from gitlab at <a href="https://gitlab.com/SUSE-UIUX/eos-icons">EOS icons</a>.
-			Thanks to <a href="https://github.com/sapegin/grunt-webfont">grunt-webfont</a>.
+			<div class='container'>
+			  Download from gitlab at <a href="https://gitlab.com/SUSE-UIUX/eos-icons">EOS icons</a>.
+			  Thanks to <a href="https://github.com/sapegin/grunt-webfont">grunt-webfont</a>.
+			</div>
 		</footer>
 
 		<script>
 		(function() {
+			var showCodeSnippet = false
+			var iconName
+
+			//hide code snippet by default
+			document.getElementsByClassName('how-to-use')[0].style.visibility = 'hidden'
+
 			document.getElementById('icons').onclick = function(e) {
 				e = e || window.event;
-				var name = e.target.getAttribute('data-name') || e.target.parentNode.getAttribute('data-name');
-				document.getElementById('name2').innerHTML = name;
+				iconName = e.target.getAttribute('data-name') || e.target.parentNode.getAttribute('data-name');
+				document.getElementById('name2').innerHTML = iconName;
+
+				if (iconName) {
+					showCodeSnippet = true
+					console.log('something selected')
+					document.getElementsByClassName('how-to-use')[0].style.visibility = 'visible'
+				}
 			}
+
+			document.getElementById('close-code-snippet').onclick = function(e) {
+				showCodeSnippet = false
+				iconName = ''
+				document.getElementsByClassName('how-to-use')[0].style.visibility = 'hidden'
+			}
+
+
 		})();
 		</script>
 	</body>
