--- a/templates/index-template.html
+++ b/templates/index-template.html
@@ -136,7 +136,7 @@
 		<header class='eos-logo-color-gradients'>
 		  <div class='container two-columns'>
 		    <h1>
-				  <img src='../templates/logo.png'/>
+				  <img src='images/templates/logo.png'/>
 				  <% if (version) { %><small class='version'>version <%= version %></small><% } %>
 				</h1>
 				<div class='pull-right toolbar'>
