Update: include animated icons into icon font

--- a/templates/index-template.html
+++ b/templates/index-template.html
@@ -224,6 +224,7 @@
 					showCodeSnippet = true
 					console.log('something selected')
 					document.getElementsByClassName('how-to-use')[0].style.visibility = 'visible'
+					document.getElementsByClassName('how-to-use-animated')[0].style.visibility = 'hidden'
 				}
 			}
 
