--- a/animated/scss/loading.scss
+++ b/animated/scss/loading.scss
@@ -16,9 +16,12 @@ $sb-black: #000000; //rgb(0, 0, 0)
   border-radius: 50%;
   border-top-color: $sb-gray-900;
   display: inline-block;
-  height: 0.8em;
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  height: 1em;
   margin: 0 auto;
-  width: 0.8em;
+  width: 1em;
 }
 
 @keyframes icon-loading-animate {
