Read the compiled css from the template

--- a/templates/index-template.html
+++ b/templates/index-template.html
@@ -127,9 +127,8 @@
 			.version {
 				font-size: 12px;
 			}
-
-		<%= styles %>
 		</style>
+		<link rel="stylesheet" type="text/css" href="css/eos-icons.css">
 	</head>
 	<body>
 		<header class='eos-logo-color-gradients'>
