--- a/templates/index-template-extended.html
+++ b/templates/index-template-extended.html
@@ -189,7 +189,7 @@
 			</div>
 		</div>
 
-		<!-- <div id="how-to-use" class='how-to-use-animated'>
+		<div id="how-to-use" class='how-to-use-animated'>
 		  <div class='container'>
 				<h2 class='text-white'>
 					How to use it:
@@ -198,7 +198,7 @@
 
 				<div id='animatedIconDemo'></div>
 			</div>
-		</div> -->
+		</div>
 		<footer>
 			<div class='container'>
 			  Download from gitlab at <a href="https://gitlab.com/SUSE-UIUX/eos-icons/tree/master/dist/extended/fonts">EOS icons extended</a>.
