Added links to templates

--- a/templates/index-template.html
+++ b/templates/index-template.html
@@ -201,6 +201,7 @@
 		<footer>
 			<div class='container'>
 			  Download from gitlab at <a href="https://gitlab.com/SUSE-UIUX/eos-icons">EOS icons</a>.
+			  Extended version (EOS plus MD icons)  <a href="../dist/extended/index.html">can be found here</a>.
 			  Thanks to <a href="https://github.com/sapegin/grunt-webfont">grunt-webfont</a>.
 			</div>
 		</footer>
