Added back animatd icons

--- a/templates/index-template-extended.html
+++ b/templates/index-template-extended.html
@@ -174,7 +174,7 @@
 					</div>
 				<% } %>
 			</div>
-			<!-- <div id="icons-animated">
+			<div id="icons-animated">
 
 				<h3>Animated icons</h3>
 				<div class="icons__item" data-name="loading">
@@ -189,7 +189,7 @@
 					installing
 				</div>
 			</div>
-    </div> -->
+    </div>
 
 		<div id="how-to-use" class='how-to-use'>
 		  <div class='container'>
@@ -217,7 +217,7 @@
 		</div>
 		<footer>
 			<div class='container'>
-			  Download from gitlab at <a href="https://gitlab.com/SUSE-UIUX/eos-icons/tree/master/dist/extended/fonts">EOS icons extended</a> .
+			  Download from gitlab at <a href="https://gitlab.com/SUSE-UIUX/eos-icons/tree/master/dist/extended/">EOS icons extended</a> .
 			  Thanks to <a href="https://github.com/sapegin/grunt-webfont">grunt-webfont</a>.
 			</div>
 		</footer>
