changed search box styling

--- a/templates/index-template-extended.html
+++ b/templates/index-template-extended.html
@@ -143,6 +143,7 @@
 				}
 			#searchbar{
 				margin-left: auto;
+				padding-left: 8px;
 
 			}
 
@@ -179,7 +180,7 @@
 		<div class='container icons-container'>
 			<div class="extended-version-wrap">
 				<a href="../index.html">EOS set</a>
-				<input id="searchbar" onkeyup="search_icon()" type="text" name="search" placeholder="Search Icons..">
+				<input id="searchbar" onkeyup="search_icon()" type="text" name="search" placeholder="Search Icons...">
 			</div>
 			<div id="icons">
 				<% for (var glyphIdx = 0; glyphIdx < glyphs.length; glyphIdx++) {
