changed path for logo and generated css

--- a/templates/index-template.html
+++ b/templates/index-template.html
@@ -4,14 +4,14 @@
 		<meta charset="utf-8">
 		<title><%= fontFamilyName %> demo page</title>
 		<link href="https://fonts.googleapis.com/css?family=Lato:300,400" rel="stylesheet">
-		<link rel="stylesheet" type="text/css" href="css/templates/index.css">
+		<link rel="stylesheet" type="text/css" href="css/index.css">
 		<link rel="stylesheet" type="text/css" href="css/eos-icons.css">
 	</head>
 	<body>
 		<header class='eos-logo-color-gradients'>
 		  <div class='container two-columns'>
 		    <h1>
-				  <img src='images/templates/logo.png'/>
+				  <img src='images/logo.png'/>
 				  <% if (version) { %><small class='version'>version <%= version %></small><% } %>
 				</h1>
 				<div class='pull-right toolbar'>
