--- a/templates/index.css
+++ b/templates/index.css
@@ -5,6 +5,8 @@ body {
 	font-family: 'Lato', sans-serif;
 	font-weight: 400;
 	margin: 0;
+	max-width: 100%;
+	overflow-x: hidden;
 }
 
 .container {
