add button for users to send icons request

--- a/templates/index-template.html
+++ b/templates/index-template.html
@@ -79,6 +79,12 @@
 				<div id='animatedIconDemo'></div>
 			</div>
 		</div>
+		<div class="bottom_container">
+			<div>
+				<p class="para"> Didn't find what you were looking for?</p>
+			</div>
+			<div><a class="btn" href="https://gitlab.com/SUSE-UIUX/eos-icons/issues/" target="_blank">Request new icon</a></div>
+		</div>
 		<footer>
 			<div class='container'>
 			  Download from gitlab at <a href="https://gitlab.com/SUSE-UIUX/eos-icons">EOS icons</a>.
