--- a/scss/animated/loading.scss
+++ b/scss/animated/loading.scss
@@ -5,20 +5,15 @@
 * <div class='icon-loading md-18'></div>
 * add md-18, md-24, md-36 or md-48 class for sizes
 */
-
-/* Variables */
-$sb-gray-900: #686565; //rgb(104, 101, 101);
-$sb-black: #000000; //rgb(0, 0, 0)
+// sass-lint:disable variable-for-property
 
 .eos-icon-loading {
   animation: icon-loading-animate 1s infinite linear;
   border: 3px solid rgba($sb-black, 0.2);
   border-radius: 50%;
   border-top-color: $sb-gray-900;
-  display: inline-block;
   box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
+  display: inline-block;
   height: 1em;
   margin: 0 auto;
   width: 1em;
