Refactor variables and more

--- a/scss/base/misc.scss
+++ b/scss/base/misc.scss
@@ -4,14 +4,19 @@
 *  Helpers & modifier rules go here
 */
 .text-white {
-  color: $text-white;
+  color: $light-color;
 }
 
 pre {
-  background: $pre-background;
+  background: $light-gray;
   padding: 16px;
 }
 
 .pull-right {
   float: right;
+}
+
+html,
+body {
+  font-family: $font-family;
 }
