--- a/scss/layout/variables/header.scss
+++ b/scss/layout/variables/header.scss
@@ -1,5 +1,5 @@
 $header-bg: #fe673a;
-$header-gradient-initial: #ff890a;
-$header-gradient-middle: #ff420a;
-$header-gradient-final: #bc0289;
+$header-gradient-initial: $grad-init;
+$header-gradient-middle: $grad-middle;
+$header-gradient-final: $grad-final;
 $header-version-font-size: 12px;
