--- a/scss/layout/variables/template.scss
+++ b/scss/layout/variables/template.scss
@@ -1,4 +1,4 @@
-$body-bg: #fff;
-$body-text-color: #5f5f5f;
-$body-font-family: 'Lato', sans-serif;
+$body-bg: $light-color;
+$body-text-color: $dark-gray;
+$body-font-family: $font-family;
 $body-font-size: 16px;
