--- a/scss/components/searchbar.scss
+++ b/scss/components/searchbar.scss
@@ -3,4 +3,12 @@
 .searchbar {
   margin-left: auto;
   padding-left: 8px;
+  transition: width .15s ease-in-out;
+  width: 130px;
+
+  &:focus {
+    max-width: 200px;
+    width: 200px;
+  }
+
 }
