--- a/scss/elements/variables/buttons.scss
+++ b/scss/elements/variables/buttons.scss
@@ -1,3 +1,3 @@
-$button-bg: #e6e6e6;
-$button-text-color: #1f1f1f;
-$button-border: #d0d0d0;
+$button-bg: $light-gray;
+$button-text-color: $dark-black;
+$button-border: $lighter-gray;
