--- a/scss/layout/variables/footer.scss
+++ b/scss/layout/variables/footer.scss
@@ -1,3 +1,3 @@
-$footer-background: #ededed;
-$footer-text-color: #999;
+$footer-background: $light-gray;
+$footer-text-color: $dark-gray;
 $footer-font-size: 14px;
