added basic icons picker functionality

--- a/scss/base/variables/colors.scss
+++ b/scss/base/variables/colors.scss
@@ -4,6 +4,7 @@ $lighter-gray: #d0d0d0;
 $dark-gray: #5f5f5f;
 $dark-black: #333;
 $primary-light: #fe673a;
+$dark-red: #d60015;
 
 /* Gradient */
 $grad-init: #ff890a;
