improved footer ui

--- a/scss/components/icons-picker.scss
+++ b/scss/components/icons-picker.scss
@@ -8,9 +8,7 @@
 }
 
 .generate-btn-icons-picker {
-  color: $dark-black;
-  margin-left: 90%;
-  padding: 10px 10px;
+  float: right;
 }
 
 .upload-config-span {
