--- a/scss/components/icons-picker.scss
+++ b/scss/components/icons-picker.scss
@@ -7,10 +7,15 @@
   cursor: pointer;
 }
 
-.generate-btn-icons-picker {
+.icons-picker-footer-generate-button {
   float: right;
 }
 
 .upload-config-span {
   color: $dark-red;
+}
+
+.icons-count {
+  display: inline;
+
 }
