--- a/scss/components/thankyou-page.scss
+++ b/scss/components/thankyou-page.scss
@@ -3,9 +3,9 @@
   margin-top: $thankyou-page-container-margin-top;
   padding: $thankyou-page-container-padding;
   text-align: center;
-  }
 
-.thankyou-page-container img {
-  width: $thankyou-page-container-img-width;
-  }
-	
+  img {
+    width: $thankyou-page-container-img-width;
+    }
+
+	}
