Dist folders ignored and fixes in new index

--- a/NEW/views/layouts/layout.pug
+++ b/NEW/views/layouts/layout.pug
@@ -9,7 +9,7 @@ html
     meta(property='og:url', content='http://eos-icons.eosdesignsystem.com')
     meta(property='og:image', content='https://res.cloudinary.com/eosdesignsystem/image/upload/v1550833469/EOS/Social/eos-design-system.jpg')
     link(rel='stylesheet', href='./vendors/css/vendors.min.css')
-    link(rel='stylesheet', href='./assets/css/application-landing.css')
+    link(rel='stylesheet', href='./assets/css/application.css')
     script(src='./vendors/js/vendors.min.js')
     script(src='./assets/js/application-landing.min.js')
   body
