--- a/NEW/views/layouts/layout.pug
+++ b/NEW/views/layouts/layout.pug
@@ -11,6 +11,6 @@ html
     link(rel='stylesheet', href='./vendors/css/vendors.min.css')
     link(rel='stylesheet', href='./assets/css/application.css')
     script(src='./vendors/js/vendors.min.js')
-    script(src='./assets/js/application-landing.min.js')
+    script(src='./assets/js/application.min.js')
   body
     block content
