--- a/NEW/views/landing-page/index.pug
+++ b/NEW/views/landing-page/index.pug
@@ -5,7 +5,7 @@ block content
   header.eos-logo-color-gradients
     .container.two-columns
       h1
-        img(alt='EOS icons', src='images/logo.png')
+        img(alt='EOS icons', src='assets/images/logo.png')
         small.version version 2.0.0
       .pull-right.toolbar
         span.text-white Try different sizes: 
