Read glyphs, and fix code examples

--- a/NEW/views/landing-page/index.pug
+++ b/NEW/views/landing-page/index.pug
@@ -37,7 +37,12 @@ block content
       h2.text-white
         | How to use it:
         small#close-code-snippet.close-code-snippet.pull-right X Close
-      pre.
+      pre
+        code
+          | &lt;i class=&quot;eos-icons&quot;&gt;
+          span#eos-icon-name
+            | icon_name
+          | &lt;/i&gt;
   .how-to-use-animated
     .container
       h2.text-white
