use shared files for footer and header

--- a/NEW/views/layouts/default.pug
+++ b/NEW/views/layouts/default.pug
@@ -13,4 +13,6 @@ html
     script(src='./vendors/js/vendors.min.js')
     script(src='./assets/js/application.min.js')
   body
+    include ../shared/layout/header.pug
     block content
+    include ../shared/layout/footer.pug
