--- a/NEW/views/pages/extended.pug
+++ b/NEW/views/pages/extended.pug
@@ -3,7 +3,7 @@ extends ../layouts/default
 block content
   .container.icons-container
     .extended-version-wrap
-      a(href='extended.html') Extended version
+      a(href='index.html') EOS set
       input.searchbar(onkeyup='searchIcon()', type='text', name='search', placeholder='Search Icons...')
     #icons.js-icons-list
       .icons-item.js-icons-item(data-name='action_chains')
@@ -25,12 +25,7 @@ block content
       h2.text-white
         | How to use it:
         small#close-code-snippet.close-code-snippet.pull-right X Close
-      pre
-        code
-          | &lt;i class=&quot;eos-icons&quot;&gt;
-          span#eos-icon-name
-            | icon_name
-          | &lt;/i&gt;
+      pre.
   .how-to-use-animated
     .container
       h2.text-white
@@ -38,6 +33,14 @@ block content
         small#close-code-snippet-animated.close-code-snippet.pull-right X Close
       #animatedIconDemo
   .bottom-container
-    p  Didn't find what you were looking for?
+    p  Didn"t find what you were looking for?
     div
       a.btn(href='https://gitlab.com/SUSE-UIUX/eos-icons/issues/', target='_blank') Request new icon
+  footer
+    .container
+      | Download from gitlab at 
+      a(href='https://gitlab.com/SUSE-UIUX/eos-icons') EOS icons
+      | .
+      |         Thanks to 
+      a(href='https://github.com/sapegin/grunt-webfont') grunt-webfont
+      | .
