Enabled and fixed lint

--- a/views/pages/landing.pug
+++ b/views/pages/landing.pug
@@ -157,7 +157,7 @@ block content
         h4.d-inline.ml-lg-5.pl-lg-2 hesus jerman
     // Footer section ---------------------------------------------------------------------------------
     .footer
-      .container.text-white.text-center.pt-lg-5(id='')
+      .container.text-white.text-center.pt-lg-5
         h1 GET IN TOUCH WITH US
       .jumbotron.bg-bottom.text-white.text-center.pt-lg-5
         .row
