--- a/views/pages/landing.pug
+++ b/views/pages/landing.pug
@@ -3,7 +3,7 @@ extends ../layouts/default
 block content
   // header ----------------------------------------------------------------------------------------
   .header.mb-lg-2
-    #content.container.text-white.img-fluid(alt='Responsive image')
+    .content.container.text-white.img-fluid(alt='Responsive image')
       h2
         | Free. Open source. Vector and pixel-perfect icons. The iconic font your product needs.
   // Open source DNA -------------------------------------------------------------------------------
