add service, controller, and temporal gulp script to have the extended icons working

--- a/views/pages/extended.pug
+++ b/views/pages/extended.pug
@@ -5,8 +5,8 @@ block content
     .extended-version-wrap
       a(href='index.html') EOS set
       input.searchbar(onkeyup='searchIcon()', type='text', name='search', placeholder='Search Icons...')
-    #icons.js-icons-list
-      .icons-item.js-icons-item(data-name='action_chains')
+    #icons.js-extended-icons-list
+      .icons-item.js-extended-icons-item
         i.eos-icons.js-eos-icons
         br
         .js-eos-icon-name
