--- a/assets/stylesheets/landing-page/base/variables/colors.scss
+++ b/assets/stylesheets/landing-page/base/variables/colors.scss
@@ -1,4 +1,5 @@
 $light-color: #fff;
+$dark-color: #000;
 $light-gray: #dedede;
 $lighter-gray: #d0d0d0;
 $dark-gray: #5f5f5f;
@@ -7,6 +8,7 @@ $primary-light: #fe673a;
 $dark-red: #d60015;
 
 /* Gradient */
+
 $grad-init: #ff890a;
 $grad-middle: #ff420a;
 $grad-final: #bc0289;
