--- a/assets/stylesheets/landing-page/components/icons-picker.scss
+++ b/assets/stylesheets/landing-page/components/icons-picker.scss
@@ -1,21 +1,51 @@
-.icons-picker-footer-para {
-  color: $dark-black;
-  display: inline;
-	}
-
-.icons-picker-footer-link {
-  cursor: pointer;
-}
-
-.icons-picker-footer-generate-button {
-  float: right;
-}
-
-.upload-config-span {
-  color: $dark-red;
-}
-
-.icons-count {
-  display: inline;
-
+.icons-picker-footer {
+    .select-all-icons {
+        float: left;
+        display: inline;
+        cursor: pointer;
+        margin: $icons-picker-select-margin;
+        i {
+            vertical-align: sub;
+            padding-left: $icons-picker-select-icon-padding;
+        }
+        &:hover {
+            color: $dark-color
+        }
+    }
+    .deselect-all-icons {
+        float: left;
+        display: inline;
+        cursor: pointer;
+        margin: $icons-picker-select-margin;
+        i {
+            vertical-align: sub;
+            padding-left: $icons-picker-deselect-icon-padding;
+        }
+        &:hover {
+            color: $dark-color
+        }
+    }
+    .generate-div {
+        display: inline;
+        float: right;
+        padding-bottom: $icons-picker-footer-padding-bottom;
+        ;
+        h6 {
+            display: inline;
+            border-color: $dark-gray;
+            margin: auto;
+            padding: $icons-picker-icons-count-padding;
+        }
+        button {
+            display: inline;
+            border-color: $dark-gray;
+            padding: $icons-picker-generate-button-padding;
+            border-radius: $icons-picker-generate-button-border-radius;
+            margin: auto;
+            &:hover {
+                background-color: $dark-gray;
+                color: $light-color;
+            }
+        }
+    }
 }
