--- a/assets/stylesheets/landing-page/base/variables/colors.scss
+++ b/assets/stylesheets/landing-page/base/variables/colors.scss
@@ -6,6 +6,8 @@ $dark-gray: #5f5f5f;
 $dark-black: #333;
 $primary-light: #fe673a;
 $dark-red: #d60015;
+$hyper-link-color: #008ACF;
+$hyper-link-hover-color:#15578f;
 
 /* Gradient */
 
